# plasmoid-fancy-tasks

./: CHANGELOG  CMakeLists.txt  README  TODO
applet/: ActionDelegate.cpp  ActionDelegate.h  Applet.cpp  Applet.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Constants.h  DropZone.cpp  DropZone.h  FancyTasksActionDelegate.cpp  FancyTasksActionDelegate.h  FancyTasksApplet.cpp  FancyTasksApplet.h  FancyTasksConfiguration.cpp  FancyTasksConfiguration.h  FancyTasksDropZone.cpp  FancyTasksDropZone.h  FancyTasksIcon.cpp  FancyTasksIcon.h  FancyTasksJob.cpp  FancyTasksJob.h  FancyTasksLauncher.cpp  FancyTasksLauncher.h  FancyTasksLight.cpp  FancyTasksLight.h  FancyTasksMenu.cpp  FancyTasksMenu.h  FancyTasksSeparator.cpp  FancyTasksSeparator.h  FancyTasksTask.cpp  FancyTasksTask.h  FindApplicationDialog.cpp  FindApplicationDialog.h  Icon.cpp  Icon.h  Job.cpp  Job.h  Launcher.cpp  Launcher.h  (+18 more)
applet/locale/: CMakeLists.txt  Messages.sh  de.po  en_GB.po  es.po  et.po  fr.po  km.po  nds.po  pl.po  plasma_applet_fancytasks.pot  pt.po  ru.po  sv.po  tr.po  uk.po
applet/theme/: fancytasks.svgz
applet/ui/: actions.ui  appearance.ui  arrangement.ui  findApplication.ui  general.ui  group.ui  launcherRules.ui
containment/: CMakeLists.txt  FancyPanel.cpp  Panel.cpp  Panel.h  plasma-containment-fancypanel.desktop
containment/locale/: CMakeLists.txt  Messages.sh  pl.po  plasma_containment_fancypanel.pot
themes/: dock-black-glass.svgz  dock-dark.svgz  dock-mac.svgz  dock-snow.svgz  dock-white-glass.svgz
